=== HEAD

* Deprecate passing non-hash 2nd argument to Dataset#union/intersect/except (jeremyevans)

* Deprecate one_to_many with :one_to_one option raising an error (jeremyevans)

* Automatically typecast hash and array to string for string columns in the looser_typecasting extension (jeremyevans)

* Deprecate automatic typecasting of hash and array to string for string columns (jeremyevans)

* Deprecate :eager_loader and :eager_grapher association options getting passed 3 separate arguments (jeremyevans)

* Deprecate validates_not_string (jeremyevans)

* Deprecate casting via __type suffix for prepared type placeholders in the postgres adapter (jeremyevans)

* Deprecate json_serializer's Model.json_create (jeremyevans)

* Deprecate json_serializer from_json and xml_serializer from_xml :all_columns and :all_associations options (jeremyevans)

* Deprecate passing an unsupported lock mode to Dataset#lock on PostgreSQL (jeremyevans)

* Deprecate Model::InstanceMethods.class_attr_{overridable,reader} (jeremyevans)

* Deprecate all methods in Dataset::PUBLIC_APPEND_METHODS except for literal, quote_identifier, quote_schema_table (jeremyevans)

* Deprecate all methods in Dataset::PRIVATE_APPEND_METHODS (jeremyevans)

* Deprecate Dataset.def_append_methods (jeremyevans)

* Deprecate Dataset#table_ref_append (jeremyevans)

* Deprecate SQL::Expression#to_s taking an argument and returning a literal SQL string (jeremyevans)

* Deprecate creating Model class methods automatically from plugin public dataset methods (jeremyevans)

* Add Sequel.cache_anonymous_models accessor (jeremyevans)

* Deprecate Sequel::Model.cache_anonymous_models accessor (jeremyevans)

* Deprecate identity_map plugin (jeremyevans)

* Deprecate Model#set_values (jeremyevans)

* Deprecate pg_auto_parameterize and pg_statement_cache extensions (jeremyevans)

* Deprecate Model#pk_or_nil (jeremyevans)

* Deprecate Model.print and Model.each_page (jeremyevans)
